--- a/plugin.xml
+++ b/plugin.xml
@@ -97,12 +97,12 @@
 		<hook type="before_plugin_install" src="hooks/install_prerequisites.js"/>
 		<hook type="after_plugin_install" src="hooks/copyAndUnzipProvisioningProfiles.js"/>
 		<hook type="after_plugin_install" src="hooks/fixExportOptions.js"/>
-		<hook type="before_prepare" src="hooks/copyProvisioningProfiles.js"/>
-		<hook type="before_prepare" src="hooks/editXcodeProj.js" />	
-		<hook type="before_prepare" src="hooks/fixReleaseSection.js" />	
+		<hook type="before_build" src="hooks/copyProvisioningProfiles.js"/>
+		<hook type="before_build" src="hooks/editXcodeProj.js" />	
+		<hook type="before_build" src="hooks/fixReleaseSection.js" />	
 		
 		<!-- Register a hook to modify the Podfile -->
-    	<hook type="after_prepare" src="hooks/merge_podfile.js"/>
+    	<hook type="after_build" src="hooks/merge_podfile.js"/>
 		
 		<!-- Source files for tokenization and Wallet extension -->
 		<source-file src="src/ios/TokenizationConventional.swift" />
