--- a/plugin.xml
+++ b/plugin.xml
@@ -74,8 +74,8 @@
 		<source-file src="src/android/PaymentState.java" target-dir="src/com/ahlibank/tokenization/TokenizationConventional" />
 		<source-file src="src/android/TransactionSent.java" target-dir="src/com/ahlibank/tokenization/TokenizationConventional" />
 		<framework custom="true" src="src/android/d1-build.gradle" type="gradleReference" />
-		<resource-file src="src/android/libs/d1-release-4.1.0.aar" target="libs/d1-release-4.1.0.aar" />
-		<resource-file src="src/android/libs/d1-debug-4.1.0.aar" target="libs/d1-debug-4.1.0.aar" />
+		<resource-file src="src/android/libs/d1-release-d1pay-4.0.1.aar" target="libs/d1-release-d1pay-4.0.1.aar" />
+		<resource-file src="src/android/libs/d1-debug-d1pay-4.0.1.aar" target="libs/d1-debug-d1pay-4.0.1.aar" />
 	</platform>
 	<platform name="ios">
 		
@@ -97,12 +97,12 @@
 		<hook type="before_plugin_install" src="hooks/install_prerequisites.js"/>
 		<hook type="after_plugin_install" src="hooks/copyAndUnzipProvisioningProfiles.js"/>
 		<hook type="after_plugin_install" src="hooks/fixExportOptions.js"/>
-		<hook type="before_build" src="hooks/copyProvisioningProfiles.js"/>
-		<hook type="before_build" src="hooks/editXcodeProj.js" />	
-		<hook type="before_build" src="hooks/fixReleaseSection.js" />	
+		<hook type="before_prepare" src="hooks/copyProvisioningProfiles.js"/>
+		<hook type="before_prepare" src="hooks/editXcodeProj.js" />	
+		<hook type="before_prepare" src="hooks/fixReleaseSection.js" />	
 		
 		<!-- Register a hook to modify the Podfile -->
-    	<hook type="after_build" src="hooks/merge_podfile.js"/>
+    	<hook type="after_prepare" src="hooks/merge_podfile.js"/>
 		
 		<!-- Source files for tokenization and Wallet extension -->
 		<source-file src="src/ios/TokenizationConventional.swift" />
