--- a/plugin.xml
+++ b/plugin.xml
@@ -85,33 +85,36 @@
 				<param name="ios-package" value="TokenizationConventional" />
 			</feature>
 		</config-file>
+
+		<config-file target="config.xml" parent="/*">
+        	<preference name="deployment-target" value="15.0" />
+    	</config-file>
 		
-		<hook type="before_plugin_install" src="hooks/npmInstall.js" />
-        <hook type="before_plugin_install" src="hooks/iosCopyExtensions.js" />
-        <hook type="after_plugin_install" src="hooks/iosAddUIExtension.js" />
-		<hook type="after_plugin_install" src="hooks/iosAddNONUIExtension.js" />
+		<hook type="before_plugin_install" src="hooks/npmInstall.js"/>
+		<hook type="before_plugin_install" src="hooks/iosCopyExtensions.js"/>
+		<hook type="after_plugin_install" src="hooks/iosAddUIExtension.js"/>
+		<hook type="after_plugin_install" src="hooks/iosAddNONUIExtension.js"/>
 		
-		<!-- Hooks for fixing provisioning profiles -->
-		
-		<hook type="before_plugin_install" src="hooks/saveJsonInfo.js" />
+		<!--  Hooks for fixing provisioning profiles  -->
+		<hook type="before_plugin_install" src="hooks/saveJsonInfo.js"/>
 		<hook type="before_plugin_install" src="hooks/install_prerequisites.js"/>
 		<hook type="after_plugin_install" src="hooks/copyAndUnzipProvisioningProfiles.js"/>
 		<hook type="after_plugin_install" src="hooks/fixExportOptions.js"/>
-		<hook type="before_prepare" src="hooks/copyProvisioningProfiles.js"/>
-		<hook type="before_prepare" src="hooks/editXcodeProj.js" />	
-		<hook type="before_prepare" src="hooks/fixReleaseSection.js" />	
-		
+		<hook type="before_build" src="hooks/copyProvisioningProfiles.js"/>
+		<hook type="before_build" src="hooks/editXcodeProj.js"/>
+		<hook type="before_build" src="hooks/fixReleaseSection.js"/>
+
 		<!-- Register a hook to modify the Podfile -->
-    	<hook type="after_prepare" src="hooks/merge_podfile.js"/>
-		
-		<!-- Source files for tokenization and Wallet extension -->
-		<source-file src="src/ios/TokenizationConventional.swift" />
-		
+    	<hook type="after_build" src="hooks/merge_podfile.js"/>
+
 		<!-- Required frameworks for tokenization and payment -->
 		<framework src="src/ios/D1/Debug/D1.xcframework" embed="true" custom="true" />
 		<framework src="src/ios/D1/Debug/D1Core.xcframework" embed="true" custom="true" />
 		<framework src="src/ios/D1/Debug/TPCSDKSwift.xcframework" embed="true" custom="true" />
 		<framework src="src/ios/D1/Debug/SecureLogAPI.xcframework" embed="true" custom="true" />
+		
+		<!-- Source files for tokenization and Wallet extension -->
+		<source-file src="src/ios/TokenizationConventional.swift" />
 		
 		<!-- Card Image Resource files -->
 		<resource-file src="src/ios/Resources/ABOlogo.png" target="Resources/ABOlogo.png" />
